backtraceparser: reset cached usefulness on new lines

otherwise we get into states where the usefulness doesn't reflect the
actual usefulness of the received text

BUG: 474383